# NDKGif

./: README.md
app/: build.gradle
app/src/androidTest/java/com/dming/testgif/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GifJni.cpp  GifPlayer.cpp  GifPlayer.h  PthreadSleep.cpp  PthreadSleep.h  SyncTime.cpp  SyncTime.h  log.h  native-lib.cpp  testgif.cpp
app/src/main/java/com/dming/testgif/: EglHelper.java  GifHandler.java  GifPlayer.java  MainActivity.java  NoFilter.java  TestGif.java  UpdateBitmap.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dming/testgif/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
